# QuizBomb

./: .gitignore  .replit  LICENSE  README.md  app.py  clear.py  database.db  init_db.py  main.py  pyproject.toml  questions.json  schema.sql
.github/: dependabot.yml
.github/workflows/: stale.yml
static/: styles.css
template/: index.html
templates/: 404.html  base.html  explore.html  index.html  invalidpass.html  invaliduser.html  join.html  login.html  loginoutput.html  play.html
