[tool.poetry]
name = "repl_python3_QuizBomb"
version = "0.1.0"
description = ""
authors = ["JBloves27 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.0"
Flask-Session = "^0.4.0"
replit = "^3.2.4"
markdown2 = "^2.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
